--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -11,6 +11,7 @@
 }
 body {
   padding-top: 80px;
+  background-color: #e1e1e1;
 }
 .item-company {
   color: #00BBA1;
@@ -127,7 +128,6 @@ body {
 .menu-company img.menu-company-logo {
   margin: 0px 5px;
   padding: 0px;
-  background: none;
   float: right;
 }
 .menu-company.menu-company-portal a {
@@ -143,16 +143,18 @@ body {
 .menu-company .selected {
   color: #fff;
   text-decoration: none;
-  background-color: #00ceb1;
+  /*background-coищвнlor: #00ceb1;*/
   padding: 15px;
 }
 .company-logo img {
   margin-right: -15px;
 }
+
 /* ---Global menu--- */
 /*change language*/
 .dropbtn {
   padding-bottom: 15px;
+  padding-left: 15px;
   border: none;
   cursor: pointer;
 }
@@ -162,7 +164,7 @@ body {
 }
 .dropdown-content {
   display: none;
-  margin-left: 120px;
+  margin-left: 20px;
   position: absolute;
   background-color: #212121;
   min-width: 160px;
@@ -347,7 +349,7 @@ body {
 .register-form-profireader input {
   margin-bottom: 10px;
 }
-.register-form-profireader .submit-form {
+.register-form-profireader .sabmit-form {
   background-color: #00c853;
   border: 0;
   color: #fff;
@@ -355,7 +357,7 @@ body {
   padding: 10px;
   width: 100%;
 }
-.register-form-profireader .submit-form:hover {
+.register-form-profireader .sabmit-form:hover {
   background-color: #00e676;
   transition: all 0.2s ease-out;
 }
@@ -382,8 +384,9 @@ body {
   margin-top: 30px;
 }
 .join-company h3 {
-  margin-top: 5px;
+  margin-top: -9px;
   color: #383838;
+  width: 110%;
 }
 .search-company input {
   border-radius: 0px;
@@ -544,6 +547,7 @@ body {
 }
 .some-company-info h3 {
   text-align: center;
+  overflow-wrap: break-word;
 }
 .some-company-info a {
   color: #00BBA1;
