--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -71,6 +71,7 @@
                         scrool('#joined_company_' + company_id);
                         highlight('#joined_company_56187294-164b-4001-a603-7614f897601e')
                     }, 500);
+                }).finally(function () {
                     $scope.selectedCompany_sending = false;
                 });
             };
