--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -184,6 +184,7 @@ body {
 /*change language*/
 .dropbtn {
   padding-bottom: 15px;
+  padding-left: 15px;
   border: none;
   cursor: pointer;
 }
@@ -195,7 +196,7 @@ body {
 
 .dropdown-content {
   display: none;
-  margin-left: 120px;
+  margin-left: 20px;
   position: absolute;
   background-color: @color-bg;
   min-width: 160px;
