--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -127,7 +127,6 @@ body {
 .menu-company img.menu-company-logo {
   margin: 0px 5px;
   padding: 0px;
-  background: none;
   float: right;
 }
 .menu-company.menu-company-portal a {
@@ -137,7 +136,8 @@ body {
   float: right;
 }
 .menu-company-img {
-  height: 60px;
+  height: 3em;
+  padding: 15px 0px;
   margin-top: -20px;
 }
 .menu-company .selected {
