--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -150,7 +150,6 @@ body {
 .menu-company img.menu-company-logo {
   margin: 0px 5px;
   padding: 0px;
-  background: none;
   float: right;
 }
 
@@ -164,7 +163,8 @@ body {
 }
 
 .menu-company-img {
-  height: 60px;
+  height: 3em;
+  padding: 15px 0px;
   margin-top: -20px;
 }
 
