--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -82,11 +82,11 @@
                                                     title="{{ _('Всі повідомлення') }}"
                                                     ng-class="{'selected': selected_user_menu == 'messages'}"><i
                             class="fa fa-envelope-o"></i><span>{{ _('Всі повідомлення') }}</span></a></li>
-                    <li class="dropdown"><a target="_blank" href="{{ url_company_companies() }}"
+                    <li class="dropdown" ng-if="user"><a target="_blank" href="{{ url_company_companies() }}"
                                             title="{{ _('Компанії') }}"
                                             ng-class="{'selected': selected_user_menu == 'companies'}"><i
                             class="fa fa-building-o"></i><span>{{ _('Компанії') }}</span></a></li>
-                    <li class="dropdown"><a target="_blank" href="{{ login_or_none_href() }}"
+                    <li class="dropdown" ng-if="user"><a target="_blank" href="{{ login_or_none_href() }}"
                                             ng-click="open_filemanager()" title="{{ _('Менеджер файлів') }}"
                                             ng-class="{'selected': selected_user_menu == 'file_manager'}"><i
                             class="fa fa-folder-open-o"></i><span>{{ _('Менеджер файлів') }}</span></a></li>
