--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -103,6 +103,16 @@
                                 ng-model="data.user.country_id"></select>
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                    <span class="input-group-addon" id="sizing-addon1">{{ _('Address city') }}</span>
+                    <input class="form-control" aria-describedby="sizing-addon1" type="text"
+                           placeholder="your city" ng-model="data.user.address_city">
+                </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                    <span class="input-group-addon" id="sizing-addon1">{{ _('Address location') }}</span>
+                    <input class="form-control" aria-describedby="sizing-addon1" type="text"
+                           placeholder="your address" ng-model="data.user.address_location">
+                </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                         <span class="input-group-addon" id="sizing-addon1">{{ _('Password') }}</span>
                         <input class="form-control" aria-describedby="sizing-addon1" type="text"
                                placeholder="if you want change password, put it here!"
@@ -121,11 +131,6 @@
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Phone') }}</span>
                     <input class="form-control" ng-model="data.user.address_phone" aria-describedby="sizing-addon1"
                            placeholder="your phone" pr-validation-answer="data_validation:address_phone">
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                    <span class="input-group-addon" id="sizing-addon1">{{ _('Location') }}</span>
-                    <input class="form-control" aria-describedby="sizing-addon1" type="text"
-                           placeholder="your city" ng-model="data.user.location">
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('About me') }}</span>
