--- a/profapp/templates/auth/reset_password.html
+++ b/profapp/templates/auth/reset_password.html
@@ -23,6 +23,7 @@
                                 $scope.sending = false;
                             } else {
                                 add_message('Password changed you are now logged in', 'success')
+                                window.location = resp['back_to']?resp['back_to']:'{{ url_for('index.index') }}';
                                 $scope.success = true;
                             }
                         })
