publications at portal

--- a/profapp/templates/company/material_details.html
+++ b/profapp/templates/company/material_details.html
@@ -106,8 +106,8 @@
                     }
 
                     , {
-                        name: 'publication.title', type: 'link', target: 'front',
-                        href: 'url_front_publication_details_host(row.entity.publication.id, row.entity.portal.host)'
+                        name: 'publication.material.title', type: 'link', target: 'front',
+                        href: 'url_front_publication_details_host(row.entity.material.id, row.entity.portal.host)'
                     },
                         {
                         name: 'publication.status', afilter: {type: 'multi_select'}, width: '100'
