--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -162,22 +162,25 @@ body {
 }
 .dropdown-content {
   display: none;
-  margin-left: 120px;
-  position: absolute;
+  position: absolute;top: 25px; left: -50px;
+  margin: 6px 0px 0px 0px;
   background-color: #212121;
-  min-width: 160px;
+  min-width: 130px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+
 }
 .dropdown-content a:hover {
   background-color: #00BBA1;
   transition: all 0.2s ease-out;
 }
+
 .dropdown:hover .dropdown-content {
   display: block;
   transition: all 0.2s ease-out;
