--- a/profapp/templates/front/clover/article_short.html
+++ b/profapp/templates/front/clover/article_short.html
@@ -24,5 +24,5 @@
         </div>
     </div>
     <div class="bottom-hide"></div>
-    <img {{ prImageUrl(article['illustration']['url']) }} class="block-item-img bg-contain"/>
+    <img {{ prImageUrl(article['illustration']['url']) }} class="block-item-img"/>
 </div>
