--- a/profapp/templates/front/clover/company_menu.html
+++ b/profapp/templates/front/clover/company_menu.html
@@ -1,4 +1,4 @@
-<div class="collapse navbar-collapse navbar-inverse subportal" id="bs-example-navbar-collapse-1">
+<div class="pl0 pr0 collapse navbar-collapse navbar-inverse subportal" id="bs-example-navbar-collapse-1">
 
     <div class="subportal-cover">
         <img width="300" height="300" {{ prImageUrl(member_company['logo']['url']) }} />
