--- a/profapp/templates/tools/sso.html
+++ b/profapp/templates/tools/sso.html
@@ -19,5 +19,5 @@
         </script>
     {% endif %}
 </head>
-<body></body>
+<body>This iframe is used to consolidate sessions between domains</body>
 </html>
