--- a/profapp/static/css/oles.css
+++ b/profapp/static/css/oles.css
@@ -395,6 +395,10 @@ div.pr-row:last-child div.pr-cell {
     border-bottom-style: solid;
 }
 
+.m0 {
+    margin: 0;
+}
+
 .m1em {
     margin: 1em;
 }
@@ -407,13 +411,6 @@ div.pr-row:last-child div.pr-cell {
     margin: 0.25em;
 }
 
-.m05em {
-    margin: 0.5em;
-}
-
-.m025em {
-    margin: 0.25em;
-}
 
 .mr05em {
     margin-right: 0.5em;
@@ -429,6 +426,22 @@ div.pr-row:last-child div.pr-cell {
 
 .mb05em {
     margin-bottom: 0.5em;
+}
+
+.mr0 {
+    margin-right: 0;
+}
+
+.ml0 {
+    margin-left: 0;
+}
+
+.mt0 {
+    margin-top: 0;
+}
+
+.mb0 {
+    margin-bottom: 0;
 }
 
 .mr1em {
@@ -461,6 +474,26 @@ div.pr-row:last-child div.pr-cell {
 
 .mb2em {
     margin-bottom: 2em;
+}
+
+.p0 {
+    padding: 0;
+}
+
+.pr0 {
+    padding-right: 0;
+}
+
+.pl0 {
+    padding-left: 0;
+}
+
+.pt0 {
+    padding-top: 0;
+}
+
+.pb0 {
+    padding-bottom: 0;
 }
 
 .p1em {
