--- a/profapp/static/front/clover/css/style.css
+++ b/profapp/static/front/clover/css/style.css
@@ -12,99 +12,217 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Droid Serif', serif;
 }
 
-@media (min-width: 1200px) {
+.block-item-img {
+    margin-left: 0px;
+    width: 100px;
+    height: 75px;
+    border: none !important;
+    background-color: #fff;
+}
+
+.block-item {
+    padding: 5px 5px 5px 115px;
+}
+
+.site_content {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+.center_content {
+    width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
+    display: inline-block;
+    vertical-align: top;
+    float: none;
+}
+
+.left_content {
+    width: 215px;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-left: 15px;
+    display: inline-block;
+    vertical-align: top;
+    float: none;
+    }
+
+.right_content {
+    width: 215px;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-left: 15px;
+    display: inline-block;
+    vertical-align: top;
+    float: none;
+}
+
+@media (min-width: 600px) {
+
+    .block-item-img {
+        width: 300px;
+        height: 245px;
+    }
+
+    .block-item {
+        padding: 15px 15px 15px 315px;
+    }
+}
+
+
+@media (min-width: 1100px) {
+
     .container {
-        width: 990px !important;
+        width: 1050px;
     }
 
-    /*.social-block{*/
-    /*/!*padding: 20px 0;*!/*/
-    /*top:5px;*/
-    /*-webkit-transition: top .5s ease-in-out;*/
-    /*-moz-transition: top .5s ease-in-out;*/
-    /*transition: top .5s ease-in-out;*/
-    /*}*/
-
-    .navbar {
-        /*position: relative;*/
-        padding-top: 60px;
-        top: 0px;
-        box-shadow: 0px 4px 2px #b4b4b4;
-        /*-webkit-transition: padding .5s ease-in-out, top .5s ease-in-out;*/
-        /*-moz-transition: padding .5s ease-in-out, top .5s ease-in-out;*/
-        /*transition: padding .5s ease-in-out, top .5s ease-in-out;*/
-    }
-
-
-    .navbar.top-nav-collapse {
-        /*pading-top:0;*/
-        top: -50px;
-
-    }
-
-
-    /*nav.top-nav-collapse .social-block{*/
-    /*top: -50px;*/
-    /*}*/
-    .logo img {
-        /*background-color: #ff0000;*/
+    .center_content {
+        position: absolute;
+        margin-left: 215px;
         display: block;
-        width: 200px;
-        height: 100px;
-
-        -webkit-transition: height 1.5s ease-in-out;
-        -moz-transition: height 1.5s ease-in-out;
-        transition: padding 1.5s ease-in-out;
+        padding-left: 15px;
+        padding-right: 15px;
+        width: 620px;
     }
 
-    nav.top-nav-collapse .logo img {
-        height: 50px;
+    .left_content {
+        position: absolute;
+        margin-left: 0px;
+        display: block;
+    }
+
+    .right_content {
+        position: absolute;
+        margin-left: 835px;
+        display: block;
     }
 
 }
- ul li {
 
-        }
-        ul li.left {
-                width: 20%;
-                float: left;
-        }
-        ul li.right {
-                width: 20%;
-                float: right;
-                text-align: right;
-        }
-        ul li.center {
-                text-align: center;
-        }
+@media (min-width: 1200px) {
+    .container {
+        width: 1150px;
+    }
 
- .navbar-inverse {
+    .center_content {
+        width: 720px;
+    }
+
+    .right_content {
+        margin-left: 935px;
+    }
+
+}
+
+@media (min-width: 1300px) {
+    .container {
+        width: 1250px;
+    }
+
+    .center_content {
+        width: 820px;
+    }
+
+    .right_content {
+        margin-left: 1035px;
+    }
+
+}
+
+@media (min-width: 1400px) {
+    .container {
+        width: 1350px;
+    }
+
+    .center_content {
+        width: 920px;
+    }
+
+    .right_content {
+        margin-left: 1135px;
+    }
+
+}
+
+.navbar {
+    padding-top: 60px;
+    top: 0px;
+    box-shadow: 0px 4px 2px #b4b4b4;
+}
+
+.navbar.top-nav-collapse {
+    /*pading-top:0;*/
+    top: -50px;
+
+}
+
+/*nav.top-nav-collapse .social-block{*/
+/*top: -50px;*/
+/*}*/
+.logo img {
+    /*background-color: #ff0000;*/
+    display: block;
+    width: 200px;
+    height: 100px;
+
+    -webkit-transition: height 1.5s ease-in-out;
+    -moz-transition: height 1.5s ease-in-out;
+    transition: padding 1.5s ease-in-out;
+}
+
+nav.top-nav-collapse .logo img {
+    height: 50px;
+}
+
+ul li {
+
+}
+
+ul li.left {
+    width: 20%;
+    float: left;
+}
+
+ul li.right {
+    width: 20%;
+    float: right;
+    text-align: right;
+}
+
+ul li.center {
+    text-align: center;
+}
+
+.navbar-inverse {
     background-color: #fff;
     border-color: #fefefe;
 }
-   .left-block-logo-portal {
-        float: left;
-        width: 20%;
-        height:100%;
 
-   }
+.left-block-logo-portal {
+    float: left;
+    width: 20%;
+    height: 100%;
 
-   .right-block-menu-portal {
-        width: 80%;
-        height:100%;
-        float: right;
-        text-align:center;
-   }
-
-
-   .right-block-menu-portal ul {
-       width: 100%;
-   }
-   .right-block-menu-portal  ul li {
-      float:left;
-      padding:0;
-      margin:0
 }
+
+.right-block-menu-portal {
+    width: 80%;
+    height: 100%;
+    float: right;
+    text-align: center;
+}
+
+.right-block-menu-portal ul {
+    width: 100%;
+}
+
+.right-block-menu-portal ul li {
+    float: left;
+    padding: 0;
+    margin: 0
+}
+
 .navbar-fixed-top {
     border: none;
 }
@@ -116,18 +234,19 @@ h1, h2, h3, h4, h5, h6 {
     padding-left: 15px;
 }
 
-.nav.navbar-nav  {
+.nav.navbar-nav {
     /*position:relative; right:100px;*/
     /*font-size: 15px;*/
 
 }
-  /*.border-limiter {*/
-          /*border: 0;*/
-          /*border-bottom: 6px solid #e1e1e1;*/
-          /*margin: auto;*/
-          /*width: 989px;*/
-          /*padding-left: 1px;*/
-  /*}*/
+
+/*.border-limiter {*/
+/*border: 0;*/
+/*border-bottom: 6px solid #e1e1e1;*/
+/*margin: auto;*/
+/*width: 989px;*/
+/*padding-left: 1px;*/
+/*}*/
 
 .logo {
     display: block;
@@ -179,10 +298,12 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #E1E1E1;
     padding-top: 15px;
 }
-.site-content h1{
+
+.site-content h1 {
     color: #424242;
     font-size: 24px;
 }
+
 .social-block {
     top: -50px;
     right: 40px;
@@ -234,7 +355,6 @@ footer .btn-social-icon {
 .block-item {
     display: block;
     position: relative;
-    padding: 15px 15px 15px 315px;
     background: #fff;
     margin-bottom: 20px;
     height: 240px;
@@ -242,13 +362,13 @@ footer .btn-social-icon {
 
 }
 
-.block-item.full-block-info{
+.block-item.full-block-info {
     padding: 15px;
     height: auto;
     width: 728px;
 }
 
-.block-item img{
+.block-item img {
     position: absolute;
     top: 0;
     left: 0;
@@ -256,7 +376,7 @@ footer .btn-social-icon {
     border-image: none;
 }
 
-.block-item.full-block-info img{
+.block-item.full-block-info img {
     position: relative;
 }
 
@@ -390,14 +510,14 @@ a.item-company {
 }
 
 /*.pager li.current-page > a {*/
-    /*color: #336699 !important;*/
+/*color: #336699 !important;*/
 /*}*/
 
 /*.pager li.previous,*/
 /*.pager li.next {*/
-    /*/!*background: #ccc;*!/*/
-    /*position: absolute;*/
-    /*top: 7px;*/
+/*/!*background: #ccc;*!/*/
+/*position: absolute;*/
+/*top: 7px;*/
 /*}*/
 
 .pager li.previous a,
@@ -418,7 +538,7 @@ a.item-company {
 
 /*.pager li.previous:hover,*/
 /*.pager li.next:hover {*/
-    /*background-position-y: bottom;*/
+/*background-position-y: bottom;*/
 /*}*/
 
 .pager li.previous {
@@ -501,7 +621,7 @@ footer .promo {
 
 .well {
     position: relative;
-    width: 1100px;
+    width: 100%;
     margin: 0px auto;
     padding-top: 0px;
     padding-bottom: 0px;
@@ -607,6 +727,7 @@ footer .promo {
     margin-left: 200px;
     padding-left: 18px;
 }
+
 .block-item .item-additional-info .item-publication-date,
 .block-item .item-additional-info-top .item-publication-date {
     /*float: right;*/
@@ -648,7 +769,6 @@ footer .promo {
     text-decoration: none;
 }
 
-
 .item-subtitle {
     margin-bottom: 20px;
     color: #7d7d7d;
@@ -676,20 +796,6 @@ footer .promo {
     display: inline-block !important;
 }*/
 
-/* BOTSTRAP CORRECTION */
-
-.col-md-9 {
-    padding-right: 0;
-    padding-top: 45px;
-
-}
-
-.col-md-3 {
-    /*width: 215px;*/
-    padding-left: 17.5px;
-    padding-top: 50px;
-}
-
 /* --------------------------------------------------- */
 
 .subportal.collapse.navbar-collapse {
@@ -700,7 +806,6 @@ footer .promo {
     width: 100%;
     background: #F5F5F5;
 }
-
 
 .subportal.collapse.navbar-collapse ul {
     width: 100%;
@@ -739,20 +844,7 @@ footer .promo {
 
 /* Companys page styles */
 
-.block-item-img {
-    margin-left: 0px;
-    width: 300px;
-    height: 245px;
-    /*border: 1px solid #f00;*/
-    border: none !important;
 
-    background-size: cover;
-    /*background-size: contain;*/
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-color: #fff;
-
-}
 
 .company-item .block-item-img {
     background-size: contain;
@@ -801,10 +893,18 @@ footer .promo {
 
 }
 
-.person-item{
+.person-item {
     display: inline-block;
     margin: 10px;
     padding: 10px;
     border-bottom: 1px #aaa solid;
     width: 325px;
+}
+
+.col-md-7-5 {
+    width: 62.5%;
+}
+
+.col-md-2-5 {
+    width: 20.8333333333%;
 }
