--- a/profapp/templates/front/_common/block_user.html
+++ b/profapp/templates/front/_common/block_user.html
@@ -3,7 +3,7 @@
    href="{% if g.user %}//{{ MAIN_DOMAIN }}/user/profile/{{ g.user.id }}{% else %}{{ url_join }}{% endif %}">
     {%- if g.user -%}
     <img {{ prImageUrl(g.user.avatar.url) }} class="front-user-avatar-img"/>
-        {% else %}
+        {%- else -%}
         <img {{ prImageUrl(static_address('images/0.gif')) }} class="front-user-avatar-img dn"/>
     {%- endif -%}
     <span>{%- if g.user and g.user.id -%}
