validation in portal creation

--- a/profapp/templates/portal/portal_create.html
+++ b/profapp/templates/portal/portal_create.html
@@ -76,9 +76,8 @@
                             <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 edit-data form-portal-edit">
                                 <label><input ng-value="'profi'" ng-model="data.portal.host_profi_or_own" type="radio"/>{{
                                     _
-                                    ('Profireader
-                                    subdomain') }}</label> https://<input ng-disabled="data.portal.host_profi_or_own !==
-                                'profi'"
+                                    ('Profireader subdomain') }}</label>
+                                https://<input ng-disabled="data.portal.host_profi_or_own !== 'profi'"
                                                                           type="text" class=" border-radius"
                                                                           aria-describedby="basic-addon3"
                                                                           pr-validation-answer="data_validation:host"
