--- a/profapp/templates/company/company_employees.html
+++ b/profapp/templates/company/company_employees.html
@@ -118,6 +118,7 @@
             $scope.$$translate = {{ translates('company_employees_controller')|safe }};
             $scope.company = {{ company.get_client_side_dict(fields = 'id,name')|tojson|safe }};
             $scope.url_employee_update = {{ raw_url_for('company.employee_update')|safe }};
+            $scope.get_link_user_profile = {{ raw_url_for('user.profile')|safe }};
             {% raw %}
 
             $scope.loadData = function (data, callbackfunc) {
@@ -128,6 +129,7 @@
                     $scope.loading = false
                 });
             };
+
 
             $scope.grid_update_row = function (updated_row) {
                 $scope.gridApi.grid.grid_change_row(updated_row);
@@ -180,18 +182,18 @@
 
             $scope.gridOptions1 = $.extend({}, $scope.gridOptions, {
                 loadGridData: $scope.loadData,
+
                 columnDefs: [
                     {
-                        name: 'full_name', width: '20%', atype: 'link',
-                        href: 'url_employee_update({company_id:grid.appScope.company.id, user_id: row.entity' +
-                        '.user_id})',
+                        name: 'full_name', width: '20%', type: 'link',
+                        href:'get_link_user_profile({user_id : row.entity.user_id})',
                         afilter: {type: 'input'}
                     },
 
                     {
                         name: 'position',
                         onclick: 'change_position',
-                        width: '7%', afilter: {type: 'input'}
+                        width: '10%', afilter: {type: 'input'}
                     }
                     ,
                     {name: 'status', width: '7%', afilter: {type: 'input'}},
@@ -205,13 +207,11 @@
                         }
                     },
                     {
-                       name: 'profireader_email',
-                       onclick: 'change_position',
+                       name: 'address_email',
                        width: '10%', afilter: {type: 'input'}
                     },
                     {
-                       name: 'profireader_phone',
-                       onclick: 'change_position',
+                       name: 'address_phone',
                        width: '10%', afilter: {type: 'input'}
                     },
                     {
