--- a/profapp/templates/company/company_employees.html
+++ b/profapp/templates/company/company_employees.html
@@ -196,7 +196,8 @@
                         width: '10%', afilter: {type: 'input'}
                     }
                     ,
-                    {name: 'status', width: '7%', afilter: {type: 'input'}},
+                    {name: 'status',showSelectionCheckbox: True,
+                        width: '7%', afilter: {type: 'input'}},
                     {
                         name: 'rights',
                         width: '20%',
