--- a/profapp/templates/front/_common/block_head.html
+++ b/profapp/templates/front/_common/block_head.html
@@ -1,6 +1,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -44,3 +45,4 @@
     <script src="{{ static_address('new/moment/' + g.lang + '.js') }}"></script>{% endif %}
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+<script src="{{ static_address('front/js/bootstrap.js') }}"></script>
