--- a/profapp/templates/front/_common/block_menu.html
+++ b/profapp/templates/front/_common/block_menu.html
@@ -1,18 +1,18 @@
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="well">
-        <div class="social-block">
-            {% include 'block_user.html' %}
+{#<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">#}
+{#    <div class="well">#}
+
+{#        <div class="menu-block-portal">#}
+<div class="col-xs-12">
+        <nav class="navbar navbar-default">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav" aria-expanded="false"> <span class="sr-only">Toggle navigation</span>  <span class="icon-bar"></span>  <span class="icon-bar"></span>  <span class="icon-bar"></span>
+          </button> <a class="navbar-brand" href="#">GNOMIS</a>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <div class="left-block--portal">
-                <div class="centred">
-                    <a class="logo" href="/"><img {{ prImageUrl(portal.logo.url) }} alt="Portal logo"
-                                                                                     class="block-item-img"></a>
-                </div>
-            </div>
-            <div class="right-block-menu-portal">
-                <ul class="nav navbar-nav">
-                    {% for division_id, di in portal.divisions.items() %}
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-nav">
+          <ul class="nav navbar-nav">
+            {% for division_id, di in portal.divisions.items() %}
                         {% if di.portal_division_type_id in ['news', 'events', 'catalog'] %}
                             <li {% if di.id == division.id %}class="active"{% endif %}>
                                 <a href=" {{ url_for('front.division', division_name=di.name) }}">{{ di.name }}</a>
@@ -26,9 +26,36 @@
                             {{ raise("Unknown division type `" + di.portal_division_type_id +  "`") }}
                         {% endif %}
                     {% endfor %}
-                </ul>
-            </div>
+          </ul>
         </div>
-    </div>
-</nav>
+        <!-- /.navbar-collapse -->
+      </nav>
 
+
+{#            <a class="logo" href="/"><img {{ prImageUrl(portal.logo.url) }} alt="Portal logo"/></a>#}
+{#            <div class="social-block">#}
+{#                {% include 'block_user.html' %}#}
+{#            </div>#}
+{#            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav" aria-expanded="false"> <span class="sr-only">Toggle navigation</span>  <span class="icon-bar"></span>  <span class="icon-bar"></span>  <span class="icon-bar"></span></button>#}
+{#            <div class="collapse navbar-collapse">#}
+{#                <ul class="nav navbar-nav" id="bs-nav">#}
+{#                    {% for division_id, di in portal.divisions.items() %}#}
+{#                        {% if di.portal_division_type_id in ['news', 'events', 'catalog'] %}#}
+{#                            <li {% if di.id == division.id %}class="active"{% endif %}>#}
+{#                                <a href=" {{ url_for('front.division', division_name=di.name) }}">{{ di.name }}</a>#}
+{#                            </li>#}
+{#                        {% elif di.portal_division_type_id in ['company_subportal'] %}#}
+{#                            <li {% if di.id == division.id %}class="active"{% endif %}>#}
+{#                                <a href=" {{ url_for('front.company_page', member_company_id = di['subportal_company'].id, member_company_name = di['subportal_company'].name) }}">{{ di.name }}</a>#}
+{#                            </li>#}
+{#                        {% elif di.portal_division_type_id in ['index'] %}#}
+{#                        {% else %}#}
+{#                            {{ raise("Unknown division type `" + di.portal_division_type_id +  "`") }}#}
+{#                        {% endif %}#}
+{#                    {% endfor %}#}
+{#                </ul>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
+{#</nav>#}
+</div>
