--- a/profapp/templates/front/clover/layout.html
+++ b/profapp/templates/front/clover/layout.html
@@ -1,6 +1,6 @@
 {% extends '_common/html.html' %}
 {% block body %}
-    <div class="container pl0 pr0">
+    <div class="">
         <div class="row site_content" style="margin-top: 50px;">
             {% block site_content %}
                 <div class="col-md-12 top_content pl0 pr0">
