--- a/profapp/templates/front/bootstrap/layout.html
+++ b/profapp/templates/front/bootstrap/layout.html
@@ -3,8 +3,8 @@
     {% set _ = classes.update({'tag': {'default': 'label', 'selected': 'label-danger', 'unselected': 'label-default'}}) %}
     {% set _ = classes.update({'menu': {'default': '', 'selected': 'active'}}) %}
     {% set _ = classes.update({'pager': {'default': '', 'selected': 'active'}}) %}
-    {% set _ = classes.update({'image': {'portal': 'portal-logo', 'company': 'portal-logo', 'profireader': 'profireader-logo', 'user': 'user-avatar', 'illustration': 'article-illustration'}}) %}
-    {% set _ = classes.update({'disabled': 'disabled', 'hidden': 'dn'}) %}
+    {% set _ = classes.update({'image': {'portal': 'portal-logo', 'company': 'company-logo', 'profireader': 'profireader-logo', 'user': 'user-avatar', 'illustration': 'article-illustration'}}) %}
+    {% set _ = classes.update({'disabled': 'disabled', 'hidden': 'dn', 'link': 'link'}) %}
     {% set _ = classes.update({'banner': {'in_article': 'wide-banner', 'vertical': 'vertical-banner', 'bottom': 'bottom-banner'}}) %}
     {% set _ = classes.update({'block': {'top': 'top-content', 'bottom': 'bottom-content', 'middle': 'middle-content', 'left': 'left-content', 'center': 'center-content', 'right': 'right-content'}}) %}
     <div class="{{ classes.block.top }}">
