--- a/profapp/static/front/raw/css/style.css
+++ b/profapp/static/front/raw/css/style.css
@@ -3,6 +3,11 @@
     height: 200px;
 }
 
+.company-logo {
+    width: 300px;
+    height: 200px;
+}
+
 .profireader-logo {
     width: 75px;
     height: 75px;
