articles (short and details)

--- a/profapp/templates/front/bootstrap/_common/block_head.html
+++ b/profapp/templates/front/bootstrap/_common/block_head.html
@@ -12,7 +12,8 @@
       type="image/gif"/>
 
 <link rel="stylesheet" href="{{ static_address('jquery/smoothness/jquery-ui.css') }}">
-<link href="{{ static_address('front/css/bootstrap.css') }}" rel="stylesheet">
+
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
 <link href="{{ static_address('front/' + portal.layout.name + '/css/style.css') }}" rel="stylesheet">
 <link href="{{ static_address('css/article.css') }}" rel="stylesheet">
@@ -33,5 +34,5 @@
     <script src="{{ static_address('new/moment/' + g.lang + '.js') }}"></script>
 {%- endif %}
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
-<script src="{{ static_address('front/js/bootstrap.js') }}"></script>
+
+
