--- a/profapp/templates/front/bootstrap/_common/html.html
+++ b/profapp/templates/front/bootstrap/_common/html.html
@@ -2,7 +2,7 @@
 <html lang="{{ g.lang }}">
 <title>{% block title %}{{ _('%(portal_name)s', {'portal_name': portal.name}) }}{% endblock %}</title>
 <head>{% block head %}{% include 'block_head.html' %}{% endblock head %}</head>
-<body>
+<body class="{% block body_class %}{% endblock %}">
 {% block body %}{% endblock %}
 </body>
 </html>
