--- a/profapp/static/front/bootstrap/css/style.css
+++ b/profapp/static/front/bootstrap/css/style.css
@@ -1,24 +1,238 @@
+/*general*/
+body {
+    /*min-height: 2000px;*/
+    /*padding-top: 70px;*/
+}
+
+.pa {
+    position: absolute;
+}
+
+.pr {
+    position: relative;
+}
+
+.pa {
+    position: absolute;
+}
+
+.nw {
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.h1, .h2, .h3, .h4, h1, h2, h3, h4 {
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+.tac {
+    text-align: center;
+}
+
+/*images*/
 .portal-logo {
-    width: 300px;
-    height: 200px;
+    height: 50px;
+    width: 150px;
 }
 
 .profireader-logo {
-    width: 75px;
-    height: 75px;
+    width: 50px;
+    height: 50px;
 }
 
 .user-avatar {
-    width: 75px;
-    height: 75px;
+    width: 50px;
+    height: 50px;
 }
 
 .article-illustration {
     width: 300px;
-    height: 200px;
+    height: 240px;
 }
 
 .company-logo {
     width: 300px;
     height: 200px;
+}
+
+/*banners*/
+.vertical-banner {
+    margin-bottom: 5px;
+    display: block;
+}
+
+/*blocks*/
+.left-content {
+    top: 0px;
+    left: 0px;
+    width: 215px;
+    background-color: red;
+    margin-bottom: 5px;
+}
+
+.center-content {
+    top: 0px;
+    left: 220px;
+    width: calc(100% - 220px - 220px);
+    margin-bottom: 5px;
+}
+
+.right-content {
+    top: 0px;
+    right: 0px;
+    width: 215px;
+    background-color: yellow;
+    margin-bottom: 5px;
+}
+
+@media only screen and (max-width: 992px) {
+    .center-content {
+        left: 0px;
+        width: 100%;
+        position: relative;
+        float: left;
+    }
+
+    .left-content {
+        left: 0px;
+        top: 5px;
+        position: relative;
+        float: left;
+    }
+
+    .right-content {
+        left: 0px;
+        top: 5px;
+        position: relative;
+        float: right;
+    }
+}
+
+body.no-search .left-content {
+    width: 0px;
+    display: none;
+}
+
+body.no-search .center-content {
+    left: 0px;
+    width: calc(100% - 220px);
+}
+
+@media only screen and (max-width: 992px) {
+    body.no-search .center-content {
+        left: 0px;
+        width: 100%;
+        position: relative;
+        float: left;
+    }
+
+    body.no-search .right-content {
+        left: 0px;
+        top: 5px;
+        position: relative;
+        float: left;
+    }
+}
+
+/*tags*/
+.label {
+    margin-right: 3px;
+}
+
+.label a {
+    white-space: nowrap;
+    color: white;
+}
+
+/*article*/
+.article {
+    border-bottom: solid #AAEEEE thin;
+    border-top: solid #AAEEEE thin;
+    background-color: #faffff;
+}
+
+/*article-short*/
+.article-short {
+    margin-bottom: 10px;
+}
+
+.article-division-and-tags {
+    background-color: lightcyan;
+    padding: 0px 5px;
+}
+
+.article-division {
+    margin-right: 70%;
+}
+
+.article-tags {
+    position: absolute;
+    text-align: right;
+    right: 5px;
+    top: 0px;
+    width: 30%;
+}
+
+.article-company-and-date {
+    background-color: lightcyan;
+    padding: 0px 5px;
+}
+
+.article-company {
+    margin-right: 50%;
+}
+
+.article-date {
+    position: absolute;
+    text-align: right;
+    right: 5px;
+    top: 0px;
+    width: 50%;
+}
+
+.article img.article-illustration {
+    float: left;
+    margin: 0px 5px 5px 0px;
+}
+
+.article .short-text {
+    display: inline;
+}
+
+.article .short-text-and-illustration {
+    padding: 0px 5px;
+}
+
+.article-short .short-text-and-illustration {
+    max-height: 240px;
+    overflow: hidden;
+}
+
+.article-short.article-with-illustration .short-text-and-illustration {
+    min-height: 240px;
+}
+
+.article-author {
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    padding: 0px 5px;
+    text-align: right;
+    background-color: lightblue;
+}
+
+@media only screen and (max-width: 600px) {
+    .article img.article-illustration {
+        float: none;
+        margin: 0px;
+    }
+
+    .article .short-text {
+        display: block;
+    }
+
+    .article-short .short-text-and-illustration {
+        max-height: 480px;
+    }
 }
