--- a/profapp/templates/front/bootstrap/_common/block_menu.html
+++ b/profapp/templates/front/bootstrap/_common/block_menu.html
@@ -1,18 +1,36 @@
-{% include 'block_user.html' %}
-<a href="/"><img class="{{ classes.image.portal }}" {{ prImageUrl(portal.logo.url) }} /></a>
-<ul>
-    {% for division_id, di in portal.divisions.items() %}
-        {% if di.portal_division_type_id in ['news', 'events', 'catalog'] %}
-            <li {% if di.id == division.id %}class="{{ classes.menu.selected }}"{% endif %}>
-                <a href=" {{ url_for('front.division', division_name=di.name) }}">{{ di.name }}</a>
-            </li>
-        {% elif di.portal_division_type_id in ['company_subportal'] %}
-            <li {% if di.id == division.id %}class="{{ classes.menu.selected }}"{% endif %}>
-                <a href=" {{ url_for('front.company_page', member_company_id = di['subportal_company'].id, member_company_name = di['subportal_company'].name) }}">{{ di.name }}</a>
-            </li>
-        {% elif di.portal_division_type_id in ['index'] %}
-        {% else %}
-            {{ raise("Unknown division type `" + di.portal_division_type_id +  "`") }}
-        {% endif %}
-    {% endfor %}
-</ul>
+<nav class="navbar navbar-default navbar-static-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#"><a href="/"><img
+                    class="{{ classes.image.portal }}" {{ prImageUrl(portal.logo.url) }} /></a></a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                {% for division_id, di in portal.divisions.items() %}
+                    {% if di.portal_division_type_id in ['news', 'events', 'catalog'] %}
+                        <li {% if di.id == division.id %}class="{{ classes.menu.selected }}"{% endif %}>
+                            <a href=" {{ url_for('front.division', division_name=di.name) }}">{{ di.name }}</a>
+                        </li>
+                    {% elif di.portal_division_type_id in ['company_subportal'] %}
+                        <li {% if di.id == division.id %}class="{{ classes.menu.selected }}"{% endif %}>
+                            <a href=" {{ url_for('front.company_page', member_company_id = di['subportal_company'].id, member_company_name = di['subportal_company'].name) }}">{{ di.name }}</a>
+                        </li>
+                    {% elif di.portal_division_type_id in ['index'] %}
+                    {% else %}
+                        {{ raise("Unknown division type `" + di.portal_division_type_id +  "`") }}
+                    {% endif %}
+                {% endfor %}
+            </ul>
+
+            {% include 'block_user.html' %}
+
+        </div><!--/.nav-collapse -->
+    </div>
+</nav>
