--- a/profapp/templates/front/bootstrap/_common/block_user.html
+++ b/profapp/templates/front/bootstrap/_common/block_user.html
@@ -1,20 +1,15 @@
 {% set url_join = '//' + MAIN_DOMAIN + '/auth/login_signup/?login_signup=signup&portal_id=' + portal.id %}
-<a role="button" aria-haspopup="true" id="profireader_user_link"
-   href="{% if g.user %}//{{ MAIN_DOMAIN }}/user/profile/{{ g.user.id }}{% else %}{{ url_join }}{% endif %}">
-    {%- if g.user -%}
-        <img {{ prImageUrl(g.user.avatar.url) }} class="{{ classes.image.user }}"/>
-    {%- else -%}
-        <img  {{ prImageUrl(static_address('images/0.gif')) }} class="{{ classes.image.user }} {{ classes.hidden }}"/>
-    {%- endif -%}
-    <span>{%- if g.user and g.user.id -%}
-        {{ _('Hello %(full_name)s', {'full_name': g.user.full_name} ) }}
-    {%- else -%}
-        {{ _('Welcome to profireader' ) }}
-    {%- endif -%}</span></a>
-&nbsp;&nbsp;
-<a id="profireader_link" target="profireader_subscribe"
-   href="{% if g.user %}//{{ MAIN_DOMAIN }}/{% else %}{{ url_join }}{% endif %}"><img
-        class="{{ classes.image.profireader }}" src="{{ static_address('favicon.ico') }}"/></a>
+{%- if g.user -%}
+    <a role="button" aria-haspopup="true" id="profireader_user_link"
+       href="{% if g.user %}//{{ MAIN_DOMAIN }}/user/profile/{{ g.user.id }}{% else %}{{ url_join }}{% endif %}"><img {{ prImageUrl(g.user.avatar.url) }}
+            class="{{ classes.image.user }}"/></a>
+{%- else -%}
+    <a id="profireader_link" target="profireader_subscribe"
+       href="{% if g.user %}//{{ MAIN_DOMAIN }}/{% else %}{{ url_join }}{% endif %}"><img
+            class="{{ classes.image.profireader }}" src="{{ static_address('favicon.ico') }}"/></a>
+{%- endif -%}
+
+
 <script>
     window.addEventListener("message", function (messageevent) {
         console.log(messageevent);
