--- a/profapp/templates/front/bootstrap/layout.html
+++ b/profapp/templates/front/bootstrap/layout.html
@@ -6,28 +6,38 @@
     {% set _ = classes.update({'image': {'portal': 'portal-logo', 'company': 'company-logo', 'profireader': 'profireader-logo', 'user': 'user-avatar', 'illustration': 'article-illustration'}}) %}
     {% set _ = classes.update({'disabled': 'disabled', 'hidden': 'dn', 'link': 'link'}) %}
     {% set _ = classes.update({'banner': {'in_article': 'wide-banner', 'vertical': 'vertical-banner', 'bottom': 'bottom-banner'}}) %}
-    {% set _ = classes.update({'block': {'top': 'top-content', 'bottom': 'bottom-content', 'middle': 'middle-content', 'left': 'left-content', 'center': 'center-content', 'right': 'right-content'}}) %}
-    <div class="{{ classes.block.top }}">
-        {% block top_content %}{% include '_common/block_menu.html' %}{% endblock %}
-    </div>
+    {% set _ = classes.update({'block': {'top': 'top-content', 'bottom': 'bottom-content container', 'middle': 'pr container',
+    'left': 'pa left-content', 'center': 'pa center-content', 'right': 'pa right-content'}}) %}
+
+    {% block top_content %}{% include '_common/block_menu.html' %}{% endblock %}
+
     <div class="{{ classes.block.middle }}">
-        {% block middle_content %}
-            <div class="{{ classes.block.left }}">
-                {% block left_content %}{% include '_common/block_search.html' %}{% endblock %}
-            </div>
-            <div class="{{ classes.block.center }}">
-                {% block center_content %}{% endblock %}
-            </div>
-            <div class="{{ classes.block.right }}">
-                {% block right_content %}
-                    <a href="#" class="{{ classes.banner.vertical }}">{{ portal.advs.right_banner_1|safe }}</a>
-                    <a href="#" class="{{ classes.banner.vertical }}">{{ portal.advs.right_banner_2|safe }}</a>
-                {% endblock %}
-            </div>
-        {% endblock %}
+            {% block middle_content %}
+                <div class="{{ classes.block.center }}">
+                    {% block center_content %}{% endblock %}
+                </div>
+                <div class="{{ classes.block.left }}">
+                    {% block left_content %}{% include '_common/block_search.html' %}{% endblock %}
+                </div>
+                <div class="{{ classes.block.right }}">
+                    {% block right_content %}
+                        <a href="#" class="{{ classes.banner.vertical }}">{{ portal.advs.right_banner_1|safe }}</a>
+                        <a href="#" class="{{ classes.banner.vertical }}">{{ portal.advs.right_banner_2|safe }}</a>
+                    {% endblock %}
+                </div>
+
+
+            {% endblock %}
+        </div>
     </div>
+
     <div class="{{ classes.block.bottom }}">
         {% block bottom_content %}
-            <a href="#" class="{{ classes.banner.bottom }}">{{ portal.advs['bottom_banner']|safe }}</a>{% endblock %}
+            <div class="container">
+                <a href="#" class="{{ classes.banner.bottom }}">{{ portal.advs['bottom_banner']|safe }}</a>
+            </div>
+        {% endblock %}
+
     </div>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 {% endblock %}
